# kontur_api

./: .env  .env.example  .flake8  .gitignore  README.md  __init__.py  aggregation_bulk.py  api.py  bartender_label_100x180.py  bartender_print.py  config.json  cookies.py  cryptopro.py  date_defaults.py  desktop_shortcuts.py  full_orders_history.json  get_gtin.py  get_thumb.py  history_db.py  kontur_access_prolongation.py  kontur_cookies.json  kontur_test.pyw  last_single_request.json  last_single_response.json  last_snapshot.json  logger.py  main.py  main.pyw  mypy.ini  normalize_csv.py  options.py  orders_history.json  pyproject.toml  queue_utils.py  repair_shortcut.bat  requirements.txt  run_crpt_server.vbs  run_kontur.vbs  run_kontur_access_prolongation.vbs  run_kontur_mobile.vbs  (+8 more)
bartender datamatrix/: Document1.btw
data/: nomenclature.xlsx  tnved_codes.xlsx
docs/: ARCHITECTURE.md  CHZ_LOCAL_AGENT_PLAN.md  DEVELOPMENT.md  OPERATIONS.md
go-app/: .gitignore  README.md  app.go  go.mod  go.sum  main.go  wails.json
scripts/: clean_runtime.ps1  install_windows.ps1  repair_shortcut.ps1  update_windows.ps1
tests/: order_for_tsd_test.py  test_aggregation_bulk.py  test_api.py  test_bartender_label_100x180.py  test_bartender_print.py  test_cookies_prolongation.py  test_date_defaults.py  test_history_db_unit.py  test_order_history.py  test_queue_utils.py  test_ui_mobile_server.py  test_ui_v2_api_bridge.py
ui_mobile/: __init__.py  requirements_mobile.txt  server_mobile.py  start_mobile_ui.cmd
ui_v2/: api_bridge.py  bartender_label_formats.py  chz_bridge_server.py  (+4 more)
(+121 files in other folders)
